<!--
  ~ Copyright {2017} {Shudipto Trafder}
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Soil Science Dictionary</string>
    <string name="splash_str">A complete Dictionary App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- used by Recycle View -->
    <string name="rec_userName">User Name</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_developer">Developer</string>
    <string name="title_activity_favourite">Favourite</string>
    <string name="title_activity_user_add">Add Own word</string>

    <!-- details fragment -->
    <string name="details_word_label">Word: </string>
    <string name="details_des_label">Description: </string>

    <!-- option menu -->
    <string name="action_search">Search</string>
    <string name="action_night">Night Mode</string>
    <string name="action_sst">Speech to Text</string>

    <!-- nab bar -->
    <!-- communicate -->
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <!-- main -->
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="add">Add New</string>
    <!-- about -->
    <string name="legal">Terms of uses</string>
    <string name="about">About</string>
    <string name="copyright">Copyright</string>
    <string name="developer">Developer</string>

    <!-- settings -->
    <string name="nightMode">Set NightMode</string>
    <string name="nav_choose_theme">Choose Theme</string>

    <!-- hint option for add by user -->
    <string name="hintWord">word</string>
    <string name="hintdescription">write description of word</string>
    <string name="button">Click to add</string>

    <!-- Favourite activity dummy text -->
    <string name="noWordAdd">you don\'t add any favourite word yet.
        You can add your favourite word from word details. That\'s are listed here.</string>
    <string name="add_your_own_word">Add your own word</string>
    <string name="search">Search…</string>

    <!-- Theme chooser activity -->
    <string name="title_activity_color">Choose theme</string>

    <!-- splash activity progress dialog -->
    <string name="splash_pd_title">Database is preparing</string>
    <string name="splash_pd_meg">Please wait a while data base is preparing. This is first time only.</string>


    <!-- for settings -->
    <!-- ***************START************* -->
    <string name="sbackup">Backup Settings</string>
    <string name="sAdvance">Advance Settings</string>

    <!-- ***************General Preference Screen************* -->
    <!-- text size -->
    <string name="sTextSmallLabel">Small</string>
    <string name="sTextMediumLabel">Medium</string>
    <string name="sTextModerateLabel">Moderate</string>
    <string name="sTextLargeLabel">Large</string>
    <string name="sTextExtraLargeLabel">Extra Large</string>

    <!-- text size value-->
    <string name="sTextSmallValue">15</string>
    <string name="sTextMediumValue">17</string>
    <string name="sTextModerateValue">20</string>
    <string name="sTextLargeValue">23</string>
    <string name="sTextExtraLargeValue">26</string>

    <string name="textSizeKey" translatable="false">textSize</string>
    <string name="textSizeLabel">Text Size</string>

    <string name="switchKey">NightMode</string>
    <string name="switchLabel">Night Mode</string>
    <string name="switchON">Night Mode ON</string>
    <string name="switchOFF">Night Mode OFF</string>

    <string name="switchShare">ShareData</string>
    <string name="switchShareLabel">Share you added word</string>
    <string name="switchShareON">data will share</string>
    <string name="switchShareOFF">Data keep private</string>
    <!-- ***************FINISH************* -->

    <!-- ***************Backup Preference Screen************* -->
    <string name="bps_title">Backup data</string>
    <string name="bps_summery">Backup your data into storage</string>
    <string name="bps_key">backup</string>

    <!-- export -->
    <string name="bps_ex_fav_key">export_favourite</string>
    <string name="bps_ex_fav_title">Export Favourite List</string>
    <string name="bps_ex_fav_summery">Export your favourite list on your sd card</string>

    <string name="bps_ex_add_key">export_add</string>
    <string name="bps_ex_add_title">Export added word List</string>
    <string name="bps_ex_add_summery">Export your added word list on your sd card</string>

    <!-- Import -->
    <string name="bps_im_fav_key">import_favourite</string>
    <string name="bps_im_fav_title">Import Favourite List</string>
    <string name="bps_im_fav_summery">Click to import your favourite words backup data from storage</string>

    <string name="bps_im_add_key">import_add</string>
    <string name="bps_im_add_title">Import added word List</string>
    <string name="bps_im_add_summery">Click to import your own added words backup data from storage</string>
    <string name="app_intro">app intro</string>

    <string name="advance_summery">Some advance settings for advance user</string>
    <string name="advance_key">advance_pref</string>
    <string name="advance_dir_add_key">dir</string>
    <string name="advance_dir_title">Change Default Directory</string>
    <string name="advance_dir_summery">Default directory location for your data backup</string>

    <!-- ***************FINISH************* -->

    <!-- ***************APP intro************* -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Soil Science Dictionary</string>
    <string name="slide_1_desc">A complete dictionary app contains all soil related keyword</string>

    <string name="slide_2_title">Larger database</string>
    <string name="slide_2_desc">Huge database contain 1000+ word</string>

    <string name="slide_3_title">User Friendly Design</string>
    <string name="slide_3_desc">User friendly design  and also maintain material design guideline</string>

    <string name="slide_4_title">Open source</string>
    <string name="slide_4_desc">a complete open source app</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <!-- ***************FINISH************* -->
    <string name="nightmode_main_menu">NightMode</string>
    <string name="developer_picture">Developer picture</string>
    <string name="developer_details">a student a </string>
    <string name="developer_name">Shudipto Trafder</string>
    <string name="random_word">Random word</string>
    <string name="title_activity_about">About</string>

    <!--main dialog message-->
    <string name="copyrightMS">Soil Science\nAll Content reserved by &#169; Shudipto Trafder.</string>
    <string name="terms_of_use">This is a completely open source app.\n
                  You can redistribute and rebuild this app. you are also allowed to change any part of this app.\n
                  But you can not commercially distribute, redistribute and monetize this app without developer permission.\n
                  So if the question for commercial use, your are restricted. you need permission from the developer.
                  and for non-commercial use, you can feel free to use.
    </string>

    <string name="license">
        This app is under Apache License 2.0\n\n
        Copyright {2017} {Shudipto Trafder}\n

   Licensed under the Apache License, Version 2.0 (the "License");\n
   you may not use this file except in compliance with the License.\n
   You may obtain a copy of the License at\n
   \n
       http://www.apache.org/licenses/LICENSE-2.0\n
        \n
   Unless required by applicable law or agreed to in writing, software\n
   distributed under the License is distributed on an "AS IS" BASIS,\n
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
   See the License for the specific language governing permissions and\n
   limitations under the License.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="clear_history">clear history</string>
    <string name="speak_voice">Speak now</string>

</resources>
