<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright {2017} {Shudipto Trafder}
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_lover"
            android:title="@string/favourite" />

        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add"
            android:title="@string/add" />
    </group>

    <item android:title="@string/action_settings">
        <menu>

            <item
                android:id="@+id/nav_choose_theme"
                android:icon="@drawable/ic_paint_brush_and_palette"
                android:title="@string/nav_choose_theme" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings" />
        </menu>
    </item>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_icon"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_copyright"
                android:icon="@drawable/ic_copyright"
                android:title="@string/copyright" />
            <item
                android:id="@+id/nav_legal"
                android:icon="@drawable/ic_law"
                android:title="@string/legal" />
            <item
                android:id="@+id/nav_developer"
                android:icon="@drawable/ic_web_development"
                android:title="@string/developer" />
        </menu>
    </item>

</menu>
