<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright {2017} {Shudipto Trafder}
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/sTextModerateValue"
        android:entries="@array/textSizeLabel"
        android:entryValues="@array/textSizeValue"
        android:key="@string/textSizeKey"
        android:title="@string/textSizeLabel"/>

    <!--
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/switchKey"
        android:summaryOff="@string/switchOFF"
        android:summaryOn="@string/switchON"
        android:title="@string/switchLabel"/> -->

    <PreferenceCategory android:title="Share Data">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/switchShare"
            android:summaryOff="@string/switchShareOFF"
            android:summaryOn="@string/switchShareON"
            android:title="@string/switchShareLabel"/>
            android:title="@string/switchShareLabel" />

    </PreferenceCategory>

    <PreferenceCategory
        android:summary="Import and export your data.
        You can backup your data into your SD Card"
        android:title="Backup Data">

        <Preference android:title="@string/bps_title"
            android:key="@string/bps_key">

            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.blogspot.shudiptotrafder.soilscience.settings.BackupSettingsActivity"
                android:targetPackage="com.blogspot.shudiptotrafder.soilscience" />

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="Advance Settings">

        <Preference android:title="Advance Settings"
            android:key="@string/advance_key"
            android:summary="@string/advance_summery">

            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.blogspot.shudiptotrafder.soilscience.settings.AdvanceSettingsActivity"
                android:targetPackage="com.blogspot.shudiptotrafder.soilscience" />

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="Links">

        <Preference android:title="About">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.blogspot.shudiptotrafder.soilscience.AboutActivity"
                android:targetPackage="com.blogspot.shudiptotrafder.soilscience" />
        </Preference>

        <Preference android:title="Developer">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.blogspot.shudiptotrafder.soilscience.DeveloperActivity"
                android:targetPackage="com.blogspot.shudiptotrafder.soilscience" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>