<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/switchKey"
        android:summaryOff="@string/switchOFF"
        android:summaryOn="@string/switchON"
        android:title="@string/switchLabel"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="switchKey1"
        android:summaryOff="@string/switchOFF"
        android:summaryOn="@string/switchON"
        android:title="@string/switchLabel"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="sss2"
        android:summaryOff="@string/switchOFF"
        android:summaryOn="@string/switchON"
        android:title="@string/switchLabel"/>


</PreferenceScreen>