<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright {2017} {Shudipto Trafder}
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.blogspot.shudiptotrafder.soilscience.UserAddActivity"
    tools:showIn="@layout/activity_user_add">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/addWordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/add_user_text_input_margin"
        android:layout_marginStart="@dimen/add_user_text_input_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/addWordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintWord"
            android:padding="@dimen/universal_padding" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addDesLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/add_user_text_input_margin"
        android:layout_marginStart="@dimen/add_user_text_input_margin"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addWordLayout">

        <EditText
            android:id="@+id/addDesEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="230dp"
            android:hint="@string/hintdescription"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="10"
            android:padding="@dimen/universal_padding" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp"
        android:textStyle="bold"
        android:textColor="?attr/colorAccent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDesLayout"
        android:text="@string/button"
        android:background="@drawable/add_button_bcg"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_your_own_word"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/cyan_500"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"/>

</android.support.constraint.ConstraintLayout>
